parsers/grammar.txt
Program -> #begin Declaration-list $
Declaration-list -> Declaration Declaration-list | EPSILON
Declaration-list -> EPSILON
Declaration -> Declaration-initial Declaration-prime
Declaration-initial ->  #save_type Type-specifier #create_symbol ID
Declaration-prime -> #func_start Fun-declaration-prime
Declaration-prime -> Var-declaration-prime
Var-declaration-prime -> ; #set_kind_to_var
Var-declaration-prime -> ; | [ #set_kind_to_var NUM ] ;
Fun-declaration-prime ->  #new_scope ( Params ) #save_stack #save_stack Compound-stmt #end_scope
Type-specifier -> int
Type-specifier -> void


Params -> #save_type int #create_symbol ID #set_kind_to_var Param-prime Param-list #increase_fun_arg
Params -> void
Param-list -> #increase_func_arg, Param Param-list | EPSILON
Param-list -> EPSILON

Param -> Declaration-initial #set_kind_to_var Param-prime

??
Param-prime -> [  ] | EPSILON
Compound-stmt -> { Declaration-list Statement-list }

Statement-list -> Statement Statement-list | EPSILON
Statement -> Expression-stmt | Compound-stmt | Selection-stmt | Iteration-stmt | Return-stmt
Expression-stmt -> Expression ; #pop_semantic_stack | break ; #loop_break_jump | ;
Selection-stmt -> if ( Expression ) #save Statement #save #backpatch_if Else-stmt
Else-stmt -> endif #finish_if | else Statement #backpatch_else endif

Iteration-stmt -> repeat Statement until ( Expression )
Return-stmt -> return Return-stmt-prime
Return-stmt-prime -> ; | Expression ;
Expression -> Simple-expression-zegond | ID B
B -> = Expression | [ Expression ] H | Simple-expression-prime
H -> = Expression | G D C
Simple-expression-zegond -> Additive-expression-zegond C
Simple-expression-prime -> Additive-expression-prime C
C -> Relop Additive-expression | EPSILON
Relop -> < | ==
Additive-expression -> Term D
Additive-expression-prime -> Term-prime D
Additive-expression-zegond -> Term-zegond D
D -> Addop Term D | EPSILON
Addop -> + | -
Term -> Factor G
Term-prime -> Factor-prime G
Term-zegond -> Factor-zegond G
G -> * Factor G | EPSILON
Factor -> ( Expression ) | ID Var-call-prime | NUM
Var-call-prime -> ( Args ) | Var-prime
Var-prime -> [ Expression ] | EPSILON
Factor-prime -> ( Args ) | EPSILON
Factor-zegond -> ( Expression ) | NUM
Args -> Arg-list | EPSILON
Arg-list -> Expression Arg-list-prime
Arg-list-prime -> , Expression Arg-list-prime | EPSILON
